@@ -38,59 +38,6 @@ use Encode::Guess;
 				$tusu->encoding(['Shift-JIS', 'utf8']);
 			}
 		}
-    
-    sub file_and_output_is_shiftjis : Test(6) {
-        $ENV{MOJO_MODE} = 'production';
-        my $t = Test::Mojo->new(app => 'TestCase2');
-        $t->get_ok('/11/')
-			->header_is('Content-Type', 'text/html;charset=Shift_JIS')
-			->content_is('シフトJISのファイル');
-        $t->get_ok('/11/utf8.html')
-			->header_is('Content-Type', 'text/html;charset=UTF-8')
-			->content_is('utf8のファイル漢字あいうえおかきくけこ');
-	}
-		{
-			package TestCase2;
-			use strict;
-			use warnings;
-			use base 'Mojolicious';
-			use MojoX::Tusu;
-			
-			sub startup {
-				my $self = shift;
-				my $tusu = MojoX::Tusu->new($self);
-				$tusu->document_root('t/public_html');
-				$tusu->encoding(['Shift-JIS', 'utf8']);
-				$tusu->output_encoding('auto');
-			}
-		}
-    
-    sub file_and_output_is_shiftjis_mojolicious_encoding_ommited : Test(6) {
-        $ENV{MOJO_MODE} = 'production';
-        my $t = Test::Mojo->new(app => 'TestCase3');
-        $t->get_ok('/11/')
-			->header_is('Content-Type', 'text/html;charset=Shift_JIS')
-			->content_is('シフトJISのファイル');
-        $t->get_ok('/11/utf8.html')
-			->header_is('Content-Type', 'text/html;charset=UTF-8')
-			->content_is('utf8のファイル漢字あいうえおかきくけこ');
-	}
-		{
-			package TestCase3;
-			use strict;
-			use warnings;
-			use base 'Mojolicious';
-			use MojoX::Tusu;
-			
-			sub startup {
-				my $self = shift;
-				my $tusu = MojoX::Tusu->new($self);
-				$tusu->document_root('t/public_html');
-				$tusu->encoding(['Shift-JIS', 'utf8']);
-				$tusu->output_encoding('auto');
-				$self->renderer->encoding('euc-jp');
-			}
-		}
 	
     END {
         $ENV{MOJO_MODE} = $backup;
