@@ -78,5 +78,6 @@ Revision history for Mojolicious-Plugin-PstemplateRenderer
   - Depencency updated
 
 0.22 2011/06/22
-  - output_encoding deprecated.
-  
+  - output_encoding feature no longer available. Consider using
+    Plack::Middleware instead.
+    
